looks good so far

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       <!-- Normalize CSS -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 
+     <!-- Google Fonts -->
+     <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+
       <!-- CSS -->
       <link rel="stylesheet" href="css/style.css">
 
@@ -18,7 +22,7 @@
     <header>
 
         <div class="logo">
-        <a href="https://imgur.com/QYjQuQa"><img src="https://i.imgur.com/QYjQuQa.png" alt='dev' title="source: imgur.com" /></a> 
+        <img src="https://i.imgur.com/QYjQuQa.png" alt='dev' title="source: imgur.com" /> 
         </div>
 
         <button class="nav-toggle" aria-label="toggle navigation">
@@ -37,24 +41,24 @@
     </header>
 
     <!-- INTRODUCTION  -->
-    <section class="into" id="home">
+    <section class="intro" id="home">
 
         <h1 class="section__title section__title--intro">
             Hello <strong>Michael Cuccia</strong>
         </h1>
 
         <p class="section__subtitle section__subtitle--intro">
-            Full Stack Web Developer
+            &lt;Full Stack Web Developer/&gt;
         </p>
 
-        <a href="https://imgur.com/9RqvmHr"><img src="https://i.imgur.com/9RqvmHr.jpg" alt='me' title="source: imgur.com" /></a>
+        <img src="https://i.imgur.com/9RqvmHr.jpg" alt='me' class="intro__img" title="source: imgur.com" />
 
     </section>
 
     <!-- MY SERVICES -->
     <section class="my-services" id='services'>
 
-        <h2 class="section__title section__title--services">
+        <h2 class="section__title--services">
             What I do
         </h2>
 
