updated, still working

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <img src="https://i.imgur.com/QYjQuQa.png" alt='dev' title="source: imgur.com" /> 
         </div>
 
-        <button class="nav-toggle" aria-label="toggle navigation">
+        <!-- <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
-        </button>
+        </button> -->
 
         <nav class='nav'>
             <ul class="nav__list">
@@ -42,9 +42,10 @@
 
     <!-- INTRODUCTION  -->
     <section class="intro" id="home">
+      
 
         <h1 class="section__title section__title--intro">
-            Hello <strong>Michael Cuccia</strong>
+            <strong>Michael-Paul Cuccia</strong>
         </h1>
 
         <p class="section__subtitle section__subtitle--intro">
@@ -59,10 +60,20 @@
     <section class="my-services" id='services'>
 
         <h2 class="section__title--services">
-            What I do
+            Specliazing in the MERN Stack
         </h2>
 
         <div class="services">
+
+            <div class="service">
+                <h3>MongoDB</h3>
+                <p>MongoDB is a cross-platform document-oriented database program. Classified as a NoSQL database program, MongoDB uses JSON-like documents with schema. MongoDB is developed by MongoDB Inc. and licensed under the Server Side Public License.</p>
+            </div>
+
+            <div class="service">
+                <h3>Express.js</h3>
+                <p>Express is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.</p>
+            </div>
 
             <div class="service">
                 <h3>React.js</h3>
@@ -72,12 +83,44 @@
             <div class="service">
                 <h3>Node.js</h3>
                 <p>Node.js is an open-source, cross-platform, JavaScript runtime environment that executes JavaScript code outside of a browser. Node.js lets developers use JavaScript to write command line tools and for server-side scripting—running scripts server-side to produce dynamic web page content before the page is sent to the user's web browser.</p>
-            </div>
+            </div>    
 
-            <div class="service">
-                <h3>MongoDB</h3>
-                <p>MongoDB is a cross-platform document-oriented database program. Classified as a NoSQL database program, MongoDB uses JSON-like documents with schema. MongoDB is developed by MongoDB Inc. and licensed under the Server Side Public License.</p>
-            </div>
+            <br>
+            
+            <h3 class="section__title--services">
+                Other Languages and Technologies
+            </h3>
+
+            <div class="additional-services">
+                <h4>HTML</h4>
+                <h4>CSS</h4>
+                <h4>JavaScript</h4>
+                <h4>jQuery</h4>
+                <h4>Bootstrap</h4>
+                <h4>Google Firebase</h4>
+                <h4>MySQL</h4>
+                <h4>Sequelize</h4>
+                <h4>MongoDB</h4>
+                <h4>Compass</h4>
+                <h4>Atlas</h4>
+                <h4>Robo3T</h4>
+                <h4>Mongoose</h4>
+                <h4>Stitch</h4>
+                <h4>Node.js</h4>
+                <h4>Express.js</h4>
+                <h4>React.js</h4>
+                <h4>Handlebars</h4>
+                <h4>Moment.js</h4>
+                <h4>Axios</h4>
+                <h4>Ajax</h4>
+                <h4>API</h4>
+                <h4>PHP</h4>
+                <h4>C#</h4>
+                <h4>GitHub</h4>
+                <h4>Heroku</h4>
+                <h4>VSCode</h4>
+                <h4>Postman</h4>
+            </div>   
 
         </div>
 
@@ -93,16 +136,16 @@
             Who I am
         </h2>
 
-        <p class="section__subtitle section__subtitle--about">
+        <p class="section__subtitle--about">
         Husband to Renita, Father to Santino and Leela, Alpha Dog to Capone and Bruno.  
         </p>
 
         <div class="about-me__body">
-            <p>about me p1</p>
-            <p>about me p2</p>
+            <!-- <p>about me p1</p>
+            <p>about me p2</p> -->
         </div>
 
-        <a href="https://imgur.com/lIG2gSG"><img src="https://i.imgur.com/lIG2gSG.jpg" alt='mern' title="source: imgur.com" /></a>
+        <a href="https://imgur.com/lIG2gSG"></a><img src="https://i.imgur.com/lIG2gSG.jpg" alt='mern' class="about-me__img" title="source: imgur.com" /></a>
 
     </section>
 
