font awesome icons, footer style next

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
      <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
 
+     <!-- Font Awesome -->
+     <script src="https://kit.fontawesome.com/5f6b8acb22.js" crossorigin="anonymous"></script>
+
       <!-- CSS -->
       <link rel="stylesheet" href="css/style.css">
 
@@ -130,7 +133,7 @@
 
     <!-- ABOUT ME -->
 
-    <section class="about-me" id="about">
+    <!-- <section class="about-me" id="about">
 
         <h2 class="section__title section__title--about">
             Who I am
@@ -145,9 +148,9 @@
             <p>about me p2</p> -->
         </div>
 
-        <a href="https://imgur.com/lIG2gSG"></a><img src="https://i.imgur.com/lIG2gSG.jpg" alt='mern' class="about-me__img" title="source: imgur.com" /></a>
+        <!-- <a href="https://imgur.com/lIG2gSG"></a><img src="https://i.imgur.com/lIG2gSG.jpg" alt='mern' class="about-me__img" title="source: imgur.com" /></a>
 
-    </section>
+    </section> --> 
 
     <!-- My Work -->
 
@@ -157,7 +160,9 @@
             My Work
         </h2>
 
-        <p class="section__subtitle"></p>
+        <p class="section__subtitle">
+            Some of my Projects.
+        </p>
 
         <div class="portfolio">
 
@@ -169,6 +174,11 @@
             <!-- PORTFOLIO ITEM 02 -->
             <a href="#" class="portfolio__item">
                 <img src="https://i.imgur.com/cKjKzrf.png" alt="" class="portfolio__img">
+            </a>
+           
+            <!-- PORTFOLIO ITEM 02 -->
+            <a href="#" class="portfolio__item">
+                <img src="https://i.imgur.com/6xGBXtJ.png" alt="" class="portfolio__img">
             </a>
 
         </div>
@@ -182,8 +192,15 @@
         <a href="mailto:michaelpaulcuccia@yahoo.com" class="footer__link">michaelpaulcuccia@yahoo.com</a>
 
         <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/michael-paul-cuccia-8608334b/">LinkedIn</a> </li>
-            <li class="social-list__item"><a class="social-list__link" href="https://github.com/michaelpaulcuccia">GitHub </a></li>
+
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.linkedin.com/in/michael-paul-cuccia-8608334b/"><i class="fab fa-linkedin"></i></a>
+            </li>
+
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://github.com/michaelpaulcuccia"><i class="fab fa-github"></i></a>
+            </li>
+
         </ul>
 
     </footer>
