--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <img src="https://i.imgur.com/QYjQuQa.png" alt='dev' title="source: imgur.com" /> 
         </div>
 
-        <!-- <button class="nav-toggle" aria-label="toggle navigation">
+        <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
-        </button> -->
+        </button>
 
         <nav class='nav'>
             <ul class="nav__list">
@@ -63,7 +63,7 @@
     <section class="my-services" id='services'>
 
         <h2 class="section__title--services">
-            Specliazing in the MERN Stack
+            Specializing in the MERN Stack
         </h2>
 
         <div class="services">
@@ -129,7 +129,7 @@
 
         <a href="#work" class="btn">My Work</a>
 
-    </section>
+    <!-- </section> -->
 
     <!-- ABOUT ME -->
 
@@ -163,6 +163,8 @@
         <p class="section__subtitle">
             Some of my Projects.
         </p>
+        
+        <br>
 
         <div class="portfolio">
 
@@ -187,7 +189,7 @@
 
     <!-- Footer -->
 
-    <footer>
+    <footer class="footer">
 
         <a href="mailto:michaelpaulcuccia@yahoo.com" class="footer__link">michaelpaulcuccia@yahoo.com</a>
 
