further updates and deletes

--- a/index.html
+++ b/index.html
@@ -24,29 +24,25 @@
 
     <header>
 
+    <!-- Logo Image -->
+
         <div class="logo">
-        <img src="https://i.imgur.com/QYjQuQa.png" alt='dev' title="source: imgur.com" /> 
+        <img src="https://i.imgur.com/QYjQuQa.png" alt='dev' title="source: imgur.com"/>        
         </div>
 
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
+    <!-- Work and Contact Buttons -->
 
-        <nav class='nav'>
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-            </ul>
-        </nav>
+        <span>
+            <a href="#work" class="btn">My Work</a>
+             <a href="#footer" class="btn">Contact</a>
+        </span>          
 
     </header>
 
     <!-- INTRODUCTION  -->
+
     <section class="intro" id="home">
       
-
         <h1 class="section__title section__title--intro">
             <strong>Michael-Paul Cuccia</strong>
         </h1>
@@ -60,6 +56,7 @@
     </section>
 
     <!-- MY SERVICES -->
+
     <section class="my-services" id='services'>
 
         <h2 class="section__title--services">
@@ -127,31 +124,7 @@
 
         </div>
 
-        <a href="#work" class="btn">My Work</a>
-
-    <!-- </section> -->
-
-    <!-- ABOUT ME -->
-
-    <!-- <section class="about-me" id="about">
-
-        <h2 class="section__title section__title--about">
-            Who I am
-        </h2>
-
-        <p class="section__subtitle--about">
-        Husband to Renita, Father to Santino and Leela, Alpha Dog to Capone and Bruno.  
-        </p>
-
-        <div class="about-me__body">
-            <!-- <p>about me p1</p>
-            <p>about me p2</p> -->
-        </div>
-
-        <!-- <a href="https://imgur.com/lIG2gSG"></a><img src="https://i.imgur.com/lIG2gSG.jpg" alt='mern' class="about-me__img" title="source: imgur.com" /></a>
-
-    </section> --> 
-
+   
     <!-- My Work -->
 
     <section class="my-work" id="work">
@@ -189,7 +162,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
 
         <a href="mailto:michaelpaulcuccia@yahoo.com" class="footer__link">michaelpaulcuccia@yahoo.com</a>
 
