--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="portfolio__item" style="width: 18rem;">
                 <img src="https://i.imgur.com/F7OHh2O.jpg" alt="Card image cap">
                 <div>
-                  <a href="https://michaelpaulcuccia.github.io/wutangreac" class="btn-portfolio">Visit Website</a>
+                  <a href="https://michaelpaulcuccia.github.io/wutangreact" class="btn-portfolio">Visit Website</a>
                 </div>
                 <div>
                     <a href="https://github.com/michaelpaulcuccia/wutangreact" class="btn2-portfolio">See the Code</a>
@@ -213,7 +213,7 @@
                   <a href="https://michaelpaulcuccia.github.io/intakeformFireBase/" class="btn-portfolio">Visit Website</a>
                 </div>
                 <div>
-                    <a href="https://github.com/michaelpaulcuccia/intakeformFireBas" class="btn2-portfolio">See the Code</a>
+                    <a href="https://github.com/michaelpaulcuccia/intakeformFireBase" class="btn2-portfolio">See the Code</a>
                   </div>
             </div>
 
@@ -230,7 +230,7 @@
             <div class="portfolio__item" style="width: 18rem;">
                 <img src="https://i.imgur.com/cKjKzrf.png" alt="Card image cap">
                 <div>
-                  <a href="https://michaelpaulcuccia.github.io/">Visit Website</a>
+                  <a href="https://michaelpaulcuccia.github.io/reactnotetaker/"  class="btn-portfolio">Visit Website</a>
                 </div>
                 <div>
                     <a href="https://github.com/michaelpaulcuccia/reactnotetaker" class="btn2-portfolio">See the Code</a>
